<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/quit_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_dialog_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"/>

    <RadioButton
        android:id="@+id/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quit_dialog_message"
        android:textColor="#555555"
        android:checked="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/quit_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/quit_dialog_negative"
            android:textSize="16sp"
            android:textColor="#4477ff"
            android:background="@drawable/quit_dialog_button_shape"
            android:onClick="onCancelClick"/>

        <Button
            android:id="@+id/quit_dialog_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/quit_dialog_positive"
            android:textSize="16sp"
            android:textColor="#ff5555"
            android:background="@drawable/quit_dialog_button_shape"
            android:onClick="onQuitClick"/>

    </LinearLayout>

</LinearLayout>