<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeffff">

    <TextView
        android:id="@+id/login_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="登录"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/top_bar"/>

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/user"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_image"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/input_username"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username_edit_text"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/input_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_edit_text"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="#55aaff"
        android:onClick="onLoginClick"/>

    <TextView
        android:id="@+id/offline_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_offline_login"
        android:textColor="#55aaff"
        android:layout_below="@id/login"
        android:layout_alignLeft="@id/login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up"
        android:textColor="#55aaff"
        android:layout_below="@id/login"
        android:layout_alignRight="@id/login"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>
