<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/tab_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tab_main_image"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/tab01_pressed"/>

        <TextView
            android:id="@+id/tab_main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:gravity="center"
            android:textColor="#E65757"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tab_media_image"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/tab02_normal"/>

        <TextView
            android:id="@+id/tab_media_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textColor="#555555"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tab_app_image"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/tab03_normal"/>

        <TextView
            android:id="@+id/tab_app_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:textColor="#555555"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tab_share_image"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/tab06_normal"/>

        <TextView
            android:id="@+id/tab_share_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="#555555"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>